--- a/build-front/sass/pages/dco/_support.scss
+++ b/build-front/sass/pages/dco/_support.scss
@@ -66,7 +66,6 @@
             right: 0;
             transition: all $trs-d;
             padding: 30px;
-            cursor: pointer;
 
             @include max-screen($max-mobile) {
               padding: 15px;
